Started function implementations and timings.

--- a/sandbooks/notebooks/torch_functions.ipynb
+++ b/sandbooks/notebooks/torch_functions.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.6-final"
+   "version": "3.7.7-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -18,8 +18,8 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python37664bitpy37condad1bc2c14168d42c4b8075c0f3e2cdc2c",
-   "display_name": "Python 3.7.6 64-bit ('py37': conda)"
+   "name": "python37764bit35ea5608fe5f40f18ddee189641235d7",
+   "display_name": "Python 3.7.7 64-bit"
   }
  },
  "cells": [
@@ -31,6 +31,180 @@
    "source": [
     "import torch\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Timing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1 = torch.rand(10000,3)\n",
+    "x2 = torch.rand(10000,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x1,x2):\n",
+    "    return torch.sqrt(torch.sum(torch.pow(x1-x2,2),axis=1))\n",
+    "\n",
+    "class norm(object):\n",
+    "    \"\"\"\n",
+    "    This is a docstring.\n",
+    "    \"\"\"\n",
+    "    def __init__(self,F):\n",
+    "        if not callable(F):\n",
+    "            raise TypeError(\"PyMFree Norm: Function not callable\")\n",
+    "        self.F = F\n",
+    "\n",
+    "    def __call__(self,x1,x2=None):\n",
+    "        pass\n",
+    "\n",
+    "    def NoChecksPair(self,x1,x2):\n",
+    "        return self.F(x1,x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_norm = norm(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "CPU times: user 2.75 ms, sys: 372 µs, total: 3.12 ms\nWall time: 1.6 ms\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([0.8796, 0.6421, 0.5602,  ..., 0.3806, 0.4741, 0.7938])"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "%%time \n",
+    "f(x1,x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "CPU times: user 5.13 ms, sys: 156 µs, total: 5.29 ms\nWall time: 2.89 ms\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor(70.7821)"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "%%time \n",
+    "torch.dist(x1,x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "CPU times: user 13.4 ms, sys: 4.16 ms, total: 17.5 ms\nWall time: 13.7 ms\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([0.8796, 0.6421, 0.5602,  ..., 0.3806, 0.4741, 0.7938])"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "%%time \n",
+    "torch.pairwise_distance(x1,x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "CPU times: user 2.89 ms, sys: 112 µs, total: 3 ms\nWall time: 1.66 ms\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([0.7760, 0.5958, 0.5961,  ..., 0.1810, 0.9821, 0.8875])"
+     },
+     "metadata": {},
+     "execution_count": 52
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "my_norm.NoChecksPair(x1,x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y=torch.cdist(x1,x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.return_types.sort(\nvalues=tensor([[0.0168, 0.0333, 0.0417,  ..., 1.2878, 1.3032, 1.3160],\n        [0.0458, 0.0462, 0.0625,  ..., 1.1436, 1.1519, 1.1585],\n        [0.0405, 0.0406, 0.0420,  ..., 1.1753, 1.1798, 1.2053],\n        ...,\n        [0.0316, 0.0341, 0.0418,  ..., 1.2637, 1.2652, 1.2960],\n        [0.0207, 0.0256, 0.0282,  ..., 1.4104, 1.4117, 1.4157],\n        [0.0149, 0.0362, 0.0407,  ..., 1.1309, 1.1381, 1.1647]]),\nindices=tensor([[ 808, 1521, 8984,  ..., 3119, 7862, 4176],\n        [3104, 7361, 2684,  ..., 7862, 4176, 1739],\n        [9380, 5874, 3976,  ..., 6813, 9765, 1739],\n        ...,\n        [3688, 2969, 4148,  ..., 9238, 7306, 6725],\n        [8129,  860, 3507,  ...,  859, 8217, 3034],\n        [ 257, 7006, 8441,  ..., 7306, 2322, 6725]]))"
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
+   "source": [
+    "torch.sort(y,axis=1)"
    ]
   },
   {
@@ -320,6 +494,76 @@
    ],
    "source": [
     "torch.Tensor(x.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "10000"
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
+   "source": [
+    "x2.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "ya\n"
+    }
+   ],
+   "source": [
+    "if len(x2.shape) is 2:\n",
+    "    print(\"ya\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "torch.Size([10000, 3])"
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
+   "source": [
+    "x1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "10000"
+     },
+     "metadata": {},
+     "execution_count": 71
+    }
+   ],
+   "source": [
+    "f(x1,x2).shape[0]"
    ]
   },
   {
