--- a/sandbooks/notebooks/cominations.ipynb
+++ b/sandbooks/notebooks/cominations.ipynb
@@ -25,27 +25,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools"
+    "import itertools\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "tags": [
+     "outputPrepend"
+    ]
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "(1, 1, 1, 1, 1)\n(1, 1, 1, 1, 2)\n(1, 1, 1, 1, 3)\n(1, 1, 1, 1, 4)\n(1, 1, 1, 1, 5)\n(1, 1, 1, 1, 6)\n(1, 1, 1, 2, 2)\n(1, 1, 1, 2, 3)\n(1, 1, 1, 2, 4)\n(1, 1, 1, 2, 5)\n(1, 1, 1, 2, 6)\n(1, 1, 1, 3, 3)\n(1, 1, 1, 3, 4)\n(1, 1, 1, 3, 5)\n(1, 1, 1, 3, 6)\n(1, 1, 1, 4, 4)\n(1, 1, 1, 4, 5)\n(1, 1, 1, 4, 6)\n(1, 1, 1, 5, 5)\n(1, 1, 1, 5, 6)\n(1, 1, 1, 6, 6)\n(1, 1, 2, 2, 2)\n(1, 1, 2, 2, 3)\n(1, 1, 2, 2, 4)\n(1, 1, 2, 2, 5)\n(1, 1, 2, 2, 6)\n(1, 1, 2, 3, 3)\n(1, 1, 2, 3, 4)\n(1, 1, 2, 3, 5)\n(1, 1, 2, 3, 6)\n(1, 1, 2, 4, 4)\n(1, 1, 2, 4, 5)\n(1, 1, 2, 4, 6)\n(1, 1, 2, 5, 5)\n(1, 1, 2, 5, 6)\n(1, 1, 2, 6, 6)\n(1, 1, 3, 3, 3)\n(1, 1, 3, 3, 4)\n(1, 1, 3, 3, 5)\n(1, 1, 3, 3, 6)\n(1, 1, 3, 4, 4)\n(1, 1, 3, 4, 5)\n(1, 1, 3, 4, 6)\n(1, 1, 3, 5, 5)\n(1, 1, 3, 5, 6)\n(1, 1, 3, 6, 6)\n(1, 1, 4, 4, 4)\n(1, 1, 4, 4, 5)\n(1, 1, 4, 4, 6)\n(1, 1, 4, 5, 5)\n(1, 1, 4, 5, 6)\n(1, 1, 4, 6, 6)\n(1, 1, 5, 5, 5)\n(1, 1, 5, 5, 6)\n(1, 1, 5, 6, 6)\n(1, 1, 6, 6, 6)\n(1, 2, 2, 2, 2)\n(1, 2, 2, 2, 3)\n(1, 2, 2, 2, 4)\n(1, 2, 2, 2, 5)\n(1, 2, 2, 2, 6)\n(1, 2, 2, 3, 3)\n(1, 2, 2, 3, 4)\n(1, 2, 2, 3, 5)\n(1, 2, 2, 3, 6)\n(1, 2, 2, 4, 4)\n(1, 2, 2, 4, 5)\n(1, 2, 2, 4, 6)\n(1, 2, 2, 5, 5)\n(1, 2, 2, 5, 6)\n(1, 2, 2, 6, 6)\n(1, 2, 3, 3, 3)\n(1, 2, 3, 3, 4)\n(1, 2, 3, 3, 5)\n(1, 2, 3, 3, 6)\n(1, 2, 3, 4, 4)\n(1, 2, 3, 4, 5)\n(1, 2, 3, 4, 6)\n(1, 2, 3, 5, 5)\n(1, 2, 3, 5, 6)\n(1, 2, 3, 6, 6)\n(1, 2, 4, 4, 4)\n(1, 2, 4, 4, 5)\n(1, 2, 4, 4, 6)\n(1, 2, 4, 5, 5)\n(1, 2, 4, 5, 6)\n(1, 2, 4, 6, 6)\n(1, 2, 5, 5, 5)\n(1, 2, 5, 5, 6)\n(1, 2, 5, 6, 6)\n(1, 2, 6, 6, 6)\n(1, 3, 3, 3, 3)\n(1, 3, 3, 3, 4)\n(1, 3, 3, 3, 5)\n(1, 3, 3, 3, 6)\n(1, 3, 3, 4, 4)\n(1, 3, 3, 4, 5)\n(1, 3, 3, 4, 6)\n(1, 3, 3, 5, 5)\n(1, 3, 3, 5, 6)\n(1, 3, 3, 6, 6)\n(1, 3, 4, 4, 4)\n(1, 3, 4, 4, 5)\n(1, 3, 4, 4, 6)\n(1, 3, 4, 5, 5)\n(1, 3, 4, 5, 6)\n(1, 3, 4, 6, 6)\n(1, 3, 5, 5, 5)\n(1, 3, 5, 5, 6)\n(1, 3, 5, 6, 6)\n(1, 3, 6, 6, 6)\n(1, 4, 4, 4, 4)\n(1, 4, 4, 4, 5)\n(1, 4, 4, 4, 6)\n(1, 4, 4, 5, 5)\n(1, 4, 4, 5, 6)\n(1, 4, 4, 6, 6)\n(1, 4, 5, 5, 5)\n(1, 4, 5, 5, 6)\n(1, 4, 5, 6, 6)\n(1, 4, 6, 6, 6)\n(1, 5, 5, 5, 5)\n(1, 5, 5, 5, 6)\n(1, 5, 5, 6, 6)\n(1, 5, 6, 6, 6)\n(1, 6, 6, 6, 6)\n(2, 2, 2, 2, 2)\n(2, 2, 2, 2, 3)\n(2, 2, 2, 2, 4)\n(2, 2, 2, 2, 5)\n(2, 2, 2, 2, 6)\n(2, 2, 2, 3, 3)\n(2, 2, 2, 3, 4)\n(2, 2, 2, 3, 5)\n(2, 2, 2, 3, 6)\n(2, 2, 2, 4, 4)\n(2, 2, 2, 4, 5)\n(2, 2, 2, 4, 6)\n(2, 2, 2, 5, 5)\n(2, 2, 2, 5, 6)\n(2, 2, 2, 6, 6)\n(2, 2, 3, 3, 3)\n(2, 2, 3, 3, 4)\n(2, 2, 3, 3, 5)\n(2, 2, 3, 3, 6)\n(2, 2, 3, 4, 4)\n(2, 2, 3, 4, 5)\n(2, 2, 3, 4, 6)\n(2, 2, 3, 5, 5)\n(2, 2, 3, 5, 6)\n(2, 2, 3, 6, 6)\n(2, 2, 4, 4, 4)\n(2, 2, 4, 4, 5)\n(2, 2, 4, 4, 6)\n(2, 2, 4, 5, 5)\n(2, 2, 4, 5, 6)\n(2, 2, 4, 6, 6)\n(2, 2, 5, 5, 5)\n(2, 2, 5, 5, 6)\n(2, 2, 5, 6, 6)\n(2, 2, 6, 6, 6)\n(2, 3, 3, 3, 3)\n(2, 3, 3, 3, 4)\n(2, 3, 3, 3, 5)\n(2, 3, 3, 3, 6)\n(2, 3, 3, 4, 4)\n(2, 3, 3, 4, 5)\n(2, 3, 3, 4, 6)\n(2, 3, 3, 5, 5)\n(2, 3, 3, 5, 6)\n(2, 3, 3, 6, 6)\n(2, 3, 4, 4, 4)\n(2, 3, 4, 4, 5)\n(2, 3, 4, 4, 6)\n(2, 3, 4, 5, 5)\n(2, 3, 4, 5, 6)\n(2, 3, 4, 6, 6)\n(2, 3, 5, 5, 5)\n(2, 3, 5, 5, 6)\n(2, 3, 5, 6, 6)\n(2, 3, 6, 6, 6)\n(2, 4, 4, 4, 4)\n(2, 4, 4, 4, 5)\n(2, 4, 4, 4, 6)\n(2, 4, 4, 5, 5)\n(2, 4, 4, 5, 6)\n(2, 4, 4, 6, 6)\n(2, 4, 5, 5, 5)\n(2, 4, 5, 5, 6)\n(2, 4, 5, 6, 6)\n(2, 4, 6, 6, 6)\n(2, 5, 5, 5, 5)\n(2, 5, 5, 5, 6)\n(2, 5, 5, 6, 6)\n(2, 5, 6, 6, 6)\n(2, 6, 6, 6, 6)\n(3, 3, 3, 3, 3)\n(3, 3, 3, 3, 4)\n(3, 3, 3, 3, 5)\n(3, 3, 3, 3, 6)\n(3, 3, 3, 4, 4)\n(3, 3, 3, 4, 5)\n(3, 3, 3, 4, 6)\n(3, 3, 3, 5, 5)\n(3, 3, 3, 5, 6)\n(3, 3, 3, 6, 6)\n(3, 3, 4, 4, 4)\n(3, 3, 4, 4, 5)\n(3, 3, 4, 4, 6)\n(3, 3, 4, 5, 5)\n(3, 3, 4, 5, 6)\n(3, 3, 4, 6, 6)\n(3, 3, 5, 5, 5)\n(3, 3, 5, 5, 6)\n(3, 3, 5, 6, 6)\n(3, 3, 6, 6, 6)\n(3, 4, 4, 4, 4)\n(3, 4, 4, 4, 5)\n(3, 4, 4, 4, 6)\n(3, 4, 4, 5, 5)\n(3, 4, 4, 5, 6)\n(3, 4, 4, 6, 6)\n(3, 4, 5, 5, 5)\n(3, 4, 5, 5, 6)\n(3, 4, 5, 6, 6)\n(3, 4, 6, 6, 6)\n(3, 5, 5, 5, 5)\n(3, 5, 5, 5, 6)\n(3, 5, 5, 6, 6)\n(3, 5, 6, 6, 6)\n(3, 6, 6, 6, 6)\n(4, 4, 4, 4, 4)\n(4, 4, 4, 4, 5)\n(4, 4, 4, 4, 6)\n(4, 4, 4, 5, 5)\n(4, 4, 4, 5, 6)\n(4, 4, 4, 6, 6)\n(4, 4, 5, 5, 5)\n(4, 4, 5, 5, 6)\n(4, 4, 5, 6, 6)\n(4, 4, 6, 6, 6)\n(4, 5, 5, 5, 5)\n(4, 5, 5, 5, 6)\n(4, 5, 5, 6, 6)\n(4, 5, 6, 6, 6)\n(4, 6, 6, 6, 6)\n(5, 5, 5, 5, 5)\n(5, 5, 5, 5, 6)\n(5, 5, 5, 6, 6)\n(5, 5, 6, 6, 6)\n(5, 6, 6, 6, 6)\n(6, 6, 6, 6, 6)\n"
+     "text": "[array([], dtype=float64) array([1]) array([2]) array([3]) array([1, 1])\n array([1, 2]) array([1, 3]) array([2, 2]) array([2, 3]) array([3, 3])\n array([1, 1, 1]) array([1, 1, 2]) array([1, 1, 3]) array([1, 2, 2])\n array([1, 2, 3]) array([1, 3, 3]) array([2, 2, 2]) array([2, 2, 3])\n array([2, 3, 3]) array([3, 3, 3])]\n"
     }
    ],
    "source": [
-    "for x in itertools.combinations_with_replacement([1,2,3,4,5,6],5):\n",
-    "    print(x)"
+    "dims = [1,2,3]\n",
+    "p = 3\n",
+    "\n",
+    "terms = []\n",
+    "for order in range(p+1):\n",
+    "    for x in itertools.combinations_with_replacement(dims,order):\n",
+    "        terms.append(np.array(x))\n",
+    "terms = np.array(terms)\n",
+    "print(terms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_terms(terms,dims):\n",
+    "    out = np.zeros([len(terms),len(dims)])\n",
+    "    for i,term in enumerate(terms):\n",
+    "        for j, dim in enumerate(dims):\n",
+    "            out[i,j] = (term==dim).sum()\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = convert_terms(terms,dims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[0., 0., 0.],\n       [1., 0., 0.],\n       [0., 1., 0.],\n       [0., 0., 1.],\n       [2., 0., 0.],\n       [1., 1., 0.],\n       [1., 0., 1.],\n       [0., 2., 0.],\n       [0., 1., 1.],\n       [0., 0., 2.],\n       [3., 0., 0.],\n       [2., 1., 0.],\n       [2., 0., 1.],\n       [1., 2., 0.],\n       [1., 1., 1.],\n       [1., 0., 2.],\n       [0., 3., 0.],\n       [0., 2., 1.],\n       [0., 1., 2.],\n       [0., 0., 3.]])"
+     },
+     "metadata": {},
+     "execution_count": 49
+    }
+   ],
+   "source": [
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "20"
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
+   "source": [
+    "len(out)"
    ]
   },
   {
