Added polynmial and derivative structure ideas.

--- a/sandbooks/notebooks/cominations.ipynb
+++ b/sandbooks/notebooks/cominations.ipynb
@@ -25,12 +25,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import itertools\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = [1,2,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(1, 1, 1)\n(1, 1, 2)\n(1, 1, 3)\n(1, 1, 4)\n(1, 2, 2)\n(1, 2, 3)\n(1, 2, 4)\n(1, 3, 3)\n(1, 3, 4)\n(1, 4, 4)\n(2, 2, 2)\n(2, 2, 3)\n(2, 2, 4)\n(2, 3, 3)\n(2, 3, 4)\n(2, 4, 4)\n(3, 3, 3)\n(3, 3, 4)\n(3, 4, 4)\n(4, 4, 4)\n"
+    }
+   ],
+   "source": [
+    "for x in itertools.combinations_with_replacement(item,3):\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = torch.combinations(torch.tensor(item),with_replacement=True,r=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([3, 2, 2, 2, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "(out==1).sum(axis=1)"
    ]
   },
   {
@@ -117,6 +170,27 @@
    ],
    "source": [
     "len(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "tensor() missing 1 required positional arguments: \"data\"",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-ebc3ceaa76d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: tensor() missing 1 required positional arguments: \"data\""
+     ]
+    }
+   ],
+   "source": [
+    "torch.tensor()"
    ]
   },
   {
