--- a/sandbooks/notebooks/torch_functions.ipynb
+++ b/sandbooks/notebooks/torch_functions.ipynb
@@ -23,6 +23,7 @@
     "import faiss\n",
     "from sklearn.neighbors import DistanceMetric\n",
     "from pymfree.util.utils import any_norm_nn_search\n",
+    "from pymfree.util.utils import scale_params\n",
     "from pymfree.core.function import Norm\n",
     "from pymfree.core.function import L2Norm\n",
     "from pymfree.core.function import L2SquaredNorm\n",
@@ -2207,6 +2208,78 @@
    ],
    "source": [
     "l2l2(torch.rand(1,1), torch.rand(1,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = torch.rand(100,3)*10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale, shift = scale_params(coordinates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates *= scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = coordinates + shift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor([[ 0.6190,  0.9134, -0.2762],\n        [-0.0263,  0.9241, -0.2945],\n        [ 0.6494, -0.2395,  0.3738],\n        [-0.8468, -0.0450,  0.9108],\n        [ 0.1446, -0.0367,  0.2786],\n        [ 0.6438,  0.4873,  0.5322],\n        [ 0.5350,  0.9015, -0.0663],\n        [ 0.5926,  0.7626, -0.6355],\n        [ 0.3801,  0.9529, -0.0649],\n        [ 0.9091,  0.5964,  0.5700],\n        [-0.8946,  0.4738, -0.8588],\n        [ 0.0147,  0.8949,  0.4397],\n        [-0.5342,  0.5832,  0.1055],\n        [ 0.8841,  0.7370, -0.3117],\n        [ 0.4928, -0.5212,  0.4562],\n        [-0.9260,  0.1300,  0.1579],\n        [ 0.6343, -0.8927,  0.0796],\n        [ 0.8143, -0.1899, -0.6736],\n        [-0.0419, -0.3691, -0.4383],\n        [ 0.5681, -0.6641,  0.0184],\n        [-0.1844,  0.0911,  0.8207],\n        [-0.5531,  0.7338,  0.9695],\n        [ 0.8293, -0.5145, -0.8153],\n        [-0.6778, -0.7274,  0.8093],\n        [ 0.6843,  0.1997, -0.4030],\n        [ 0.6102, -0.1820,  0.8198],\n        [ 0.5759, -0.0361, -0.4050],\n        [-0.9679, -0.3220,  0.9670],\n        [-0.7390,  0.8073,  0.4002],\n        [ 0.4659, -0.6545,  0.3410],\n        [ 0.8590, -0.4760,  0.0246],\n        [-0.4006, -0.9586, -0.9070],\n        [-0.3283,  0.0189,  0.1816],\n        [ 0.9103, -0.4517,  0.5997],\n        [-0.4300,  0.7058,  0.7905],\n        [ 0.6380, -0.1419,  0.9111],\n        [-0.5784, -0.9202, -0.8717],\n        [-0.5544, -0.5312,  0.4497],\n        [-0.7765, -0.5526,  0.0843],\n        [ 0.4197,  0.0996, -0.3469],\n        [ 0.2119,  0.8969, -0.5531],\n        [-0.5057,  1.0000,  0.6684],\n        [ 0.7084, -0.3662,  0.8280],\n        [-0.2005, -0.6605, -0.2203],\n        [ 0.2764,  0.6339, -0.3519],\n        [-0.0066,  0.2770,  0.3040],\n        [-0.4009, -0.3740,  0.3597],\n        [-0.2725, -0.5392, -0.8157],\n        [ 0.9014,  0.4560,  0.9844],\n        [ 0.0571,  0.1518,  0.0199],\n        [ 0.1792,  0.6457, -0.5726],\n        [ 0.8347,  0.9187, -0.3028],\n        [-0.5455,  0.6303, -0.4733],\n        [ 0.3084, -0.0863, -0.2489],\n        [-0.8674, -0.3519,  0.3140],\n        [ 0.5665,  0.1135, -0.7246],\n        [-0.6262,  0.7467,  0.1489],\n        [ 0.9679, -0.3018,  0.0965],\n        [-0.5075, -0.3052, -0.9258],\n        [ 0.4362,  0.5321, -0.4335],\n        [ 0.4711, -0.0218,  0.6996],\n        [ 0.6976, -0.0650,  0.3078],\n        [-0.0143,  0.5137, -0.3569],\n        [-0.2250, -0.2204,  0.6071],\n        [-0.6240, -0.2693,  0.4588],\n        [-0.9882,  0.2072,  0.7584],\n        [ 0.0164,  0.8179,  0.3656],\n        [ 0.0589,  0.0129, -0.0621],\n        [-0.8213, -0.5002,  0.8670],\n        [ 0.2467, -0.0674, -0.0270],\n        [-0.2262, -0.3964,  0.1029],\n        [ 0.1501, -0.4014,  0.9900],\n        [ 0.3145,  0.5904, -0.7994],\n        [-0.9174,  0.0129, -0.9051],\n        [-0.3239, -0.0124, -0.0503],\n        [ 0.3197, -0.7028, -0.2796],\n        [-0.3916,  0.6313, -0.4648],\n        [ 0.6953,  0.3459,  0.6578],\n        [-0.8802, -0.5800, -0.3299],\n        [-0.0560, -0.0468, -0.4721],\n        [-0.9973, -0.5850,  0.4052],\n        [-0.6889,  0.3357, -0.8241],\n        [ 0.6418, -0.8921, -0.8846],\n        [-0.0028,  0.7420,  0.5881],\n        [-0.9898,  0.4921,  0.4448],\n        [ 0.8518,  0.6875,  0.5765],\n        [ 0.2656, -0.5023,  0.3913],\n        [-0.2991,  0.7760, -0.8403],\n        [-0.8189, -0.1872,  0.5423],\n        [-0.0215, -0.1762, -0.0204],\n        [-0.1623, -0.2485,  0.2602],\n        [-0.4095,  0.6422,  0.2320],\n        [ 0.0596,  0.2331,  0.6658],\n        [-0.1209, -0.0277, -0.2982],\n        [-0.2628, -0.8671, -0.6953],\n        [-0.7126,  0.8994,  0.9563],\n        [-0.5767, -1.0000,  0.5673],\n        [ 0.0399, -0.1692, -0.1301],\n        [ 0.4564,  0.1228, -0.7617],\n        [ 0.2697,  0.3479,  0.7621]])"
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "coordinates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "tensor(-1.)"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "torch.min(coordinates)"
    ]
   },
   {
